# iterative-pareto-representer

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: RE31.csv  RE32.csv  RE33.csv  RE34.csv  RE35.csv  RE36.csv  RE37.csv  RE41.csv  RE42.csv  RE61.csv  dtlz5_3.csv  dtlz5_4.csv  dtlz5_5.csv  dtlz7.csv  forest.csv  forest_Carb.csv  forest_DW.csv  forest_HA.csv  forest_Rev.csv  nforest.csv  nforest_Carb.csv  nforest_DW.csv  nforest_HA.csv
ipa/: domination.py  hull_optimization.py  intersection.py  metrics.py  ppprof.py  scalarization.py  selection.py  visibility.py
lipschitz/: test2d.ipynb
notebooks/: ASFviz.ipynb  PPplots.ipynb  data_viz.ipynb  datagen.ipynb  distance_tests.ipynb  explore_results.ipynb  results_temp.json  scatterplot.ipynb  visibilityHull.ipynb  visibilitytest.ipynb
rawdata/: data_processing.ipynb
